Attempt to fix screen size on iPhone

--- a/css/main.css
+++ b/css/main.css
@@ -52,7 +52,7 @@ body { font: 16px/26px Helvetica, Helvetica Neue, Arial;  -webkit-font-smoothing
 	(-webkit-min-device-pixel-ratio: 1.5),
 	(min-device-pixel-ratio: 1.5),
 	(min-resolution: 1.5dppx) {
-		.header-container h1 { 		font-size: 54px; }
+		.header-container h1 { 		font-size: 48px; }
 	/* on retina, use image that's scaled by 2 */
 .header-container h1{
 	/*background: url(../img/logo@2x.png) no-repeat 0 0; /* Change Retina Logo */
